	* Map effect added: map image's value/red/green/blue to gradient/palette/clipboard
	* Solid Noise effect with interactive preview added (Perlin noise generation)
	* Colour transform and source selection added to blend mode options
	* Threshold blend mode added
	* "Saturate more" blend mode redefined to not ignore source (previous behaviour available with "Image" source selected)
	* Lasso tool can be configured to shrink selection based on the selection channel - right click the tool icon
	* Clone tool is now continuous
	* Clone tool can be configured to work in unaligned mode - right click the tool icon
	* Ctrl+Left click now positions clone source when using clone tool
	* Ctrl+Right click now deletes last point when making polygonal selection (from a closed polygon, deletes the point nearest to cursor)
	* Shift and Shift+Ctrl now constrain selection box width/height when resizing it by clicking and dragging
	* Arrow keys can now be used for scrolling (Preferences->Interface->Arrow keys scroll canvas)
	* Zooming now can use mouse cursor position as its fixed point (Preferences->Interface->Zoom on cursor position)
	* Scroll wheel zoom now works for view window too
	* Zoom is now up to 8000%
	* "Hide image" and "View alpha as an overlay" can now be toggled separately for each layer (Preferences->General->Enable overlays by layer)
	* Colours A and B now highlighted in palette window
	* File actions can now enable and use an extended set of variable substitutions (see handbook section A.7)
	* New image format PMM (Portable MultiMap) added for interoperable storage and exchange of images : See handbook section A.2.4 for details
	* WebP file format save/load added
	* LBM file format (ILBM/PBM) save/load added
	* XPM files with 65-92 colours are now saved with smaller size
	* XPM files with up to 16M colours can now be saved and loaded as RGB images
	* ICC colour profiles embedded in BMP images now can be applied on load
	* OS/2 BMP files now load properly